--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "description": "A library of CSS styles to create sci-fi themed components",
   "scripts": {
     "build": "rollup -c",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -20,14 +22,27 @@
   },
   "homepage": "https://github.com/OfficerHalf/crypt-ui#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.9",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "@rollup/plugin-typescript": "^8.3.2",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/addon-svelte-csf": "^2.0.1",
+    "@storybook/addons": "^6.4.22",
+    "@storybook/svelte": "^6.4.22",
+    "@storybook/theming": "^6.4.22",
     "@tsconfig/svelte": "^3.0.0",
+    "babel-loader": "^8.2.4",
+    "postcss": "^8.4.12",
     "rollup": "^2.70.2",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-sass": "^1.2.12",
     "rollup-plugin-svelte": "^7.1.0",
     "sass": "^1.50.0",
     "svelte": "^3.47.0",
     "svelte-check": "^2.7.0",
+    "svelte-loader": "^3.1.2",
     "svelte-preprocess": "^4.10.6",
     "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
