--- a/package.json
+++ b/package.json
@@ -34,10 +34,9 @@
     "@storybook/theming": "^6.4.22",
     "@tsconfig/svelte": "^3.0.0",
     "babel-loader": "^8.2.4",
-    "postcss": "^8.4.12",
+    "normalize.css": "^8.0.1",
     "rollup": "^2.70.2",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-sass": "^1.2.12",
+    "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "sass": "^1.50.0",
     "svelte": "^3.47.0",
