--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "rollup -c",
     "prepublishOnly": "npm run build",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "npm run build && build-storybook"
   },
   "repository": {
     "type": "git",
