--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "svelte": "src/index.js",
   "module": "dist/index.mjs",
   "main": "dist/index.js",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.0",
   "description": "A library of CSS styles to create sci-fi themed components",
   "scripts": {
     "build": "rollup -c",
