--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
-node_modules
-dist
-storybook-static
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+node_modules/
+
+# misc
+.DS_Store
+.env*
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# build
+/out*/
+/build
