--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "crypt-ui",
-  "module": "dist/index.mjs",
-  "main": "dist/index.js",
-  "types": "src/index.ts",
+  "main": "src/crypt.scss",
+  "style": "src/crypt.scss",
   "version": "1.0.0-beta.3",
   "description": "A library of CSS styles to create sci-fi themed components",
   "scripts": {
-    "build": "rollup -c",
-    "prepublishOnly": "npm run build",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "npm run build && build-storybook"
+    "build": "build-storybook -c .storybook -o build",
+    "storybook": "start-storybook",
+    "test": "htmlhint \"src/**/*.html\" && stylelint \"src/**/*.css\" && eslint \"src/**/*.js\""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OfficerHalf/crypt-ui.git"
   },
+  "keywords": [],
   "author": "OfficerHalf",
   "license": "MIT",
   "bugs": {
@@ -23,28 +22,26 @@
   "homepage": "https://github.com/OfficerHalf/crypt-ui#readme",
   "devDependencies": {
     "@babel/core": "^7.17.9",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-a11y": "^6.4.22",
+    "@storybook/addon-console": "^1.2.3",
+    "@storybook/addon-design-assets": "^6.2.9",
     "@storybook/addon-essentials": "^6.4.22",
-    "@storybook/addon-links": "^6.4.22",
-    "@storybook/addon-svelte-csf": "^2.0.1",
+    "@storybook/addon-notes": "^5.3.21",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addons": "^6.4.22",
-    "@storybook/svelte": "^6.4.22",
+    "@storybook/html": "^6.4.22",
     "@storybook/theming": "^6.4.22",
-    "@tsconfig/svelte": "^3.0.0",
     "babel-loader": "^8.2.4",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "htmlhint": "^0.15.2",
     "normalize.css": "^8.0.1",
-    "rollup": "^2.70.2",
-    "rollup-plugin-scss": "^3.0.0",
-    "rollup-plugin-svelte": "^7.1.0",
-    "sass": "^1.50.0",
-    "svelte": "^3.47.0",
-    "svelte-check": "^2.7.0",
-    "svelte-loader": "^3.1.2",
-    "svelte-preprocess": "^4.10.6",
-    "ts-node": "^10.7.0",
-    "tslib": "^2.3.1",
+    "prettier": "^2.6.2",
+    "sass": "^1.50.1",
+    "sass-loader": "^10.2.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^22.0.0",
     "typescript": "^4.6.3"
   }
 }
